@@ -77,6 +77,9 @@ API Changes
 * Lucene-4415: TermsFilter is now immutable. All terms need to be provided
   as constructor argument. (Simon Willnauer)
 
+* LUCENE-4520: ValueSource.getSortField no longer throws IOExceptions
+  (Alan Woodward)
+
 Bug Fixes
 
 * LUCENE-1822: BaseFragListBuilder hard-coded 6 char margin is too naive.
